force-app/main/default/objects/Candidate_Vaccine__c/Candidate_Vaccine__c.object-meta.xml
<CustomObject>
    <label>Eligible Vaccine</label>
    <nameField>
        <displayFormat>EV{0000000}</displayFormat>
        <label>Eligibile Vaccine Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligible Vaccines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>