force-app/main/default/objects/Candidate_Vaccine__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eligible Vaccines</relationshipLabel>
    <relationshipName>Eligible_Vaccines</relationshipName>
    <type>Lookup</type>
</CustomField>