force-app/main/default/objects/Candidate_Vaccine__c/fields/Eligibility_Vaccine_Group__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Vaccine_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Vaccine Group</label>
    <referenceTo>Eligibility_Vaccine_Group__c</referenceTo>
    <relationshipName>Candidate_Vaccines</relationshipName>
    <type>Lookup</type>
</CustomField>