force-app/main/default/objects/Candidate_Vaccine__c/fields/Eligible_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Vaccine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligible Vaccine</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Candidate_Vaccines</relationshipName>
    <type>Lookup</type>
</CustomField>