force-app/main/default/objects/Candidate_Vaccine__c/fields/Site_Category__c.field-meta.xml
<CustomField>
    <fullName>Site_Category__c</fullName>
    <label>Booking Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>