force-app/main/default/objects/Candidate_Vaccine__c/fields/Vaccine_Application__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Application__c</fullName>
    <label>Vaccine Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Candidate_Vaccines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>