force-app/main/default/objects/Candidate_Vaccine__c/fields/Vaccine_Consent__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vaccine Consent</label>
    <type>Checkbox</type>
</CustomField>